--- a/custom-grouping.css
+++ b/custom-grouping.css
@@ -40,3 +40,11 @@
     height: 0;
     overflow: hidden;
 }
+
+.hl_login--body .container-fluid form {
+    width: 100% !important;
+}
+
+.hl_login--body .container-fluid {
+    display: unset !important;
+}
